update style